--- a/project_x1_news/pubspec.yaml
+++ b/project_x1_news/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   go_router: ^13.2.1
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
+
+  # Core
+  fpdart: ^1.1.0
+  supabase_flutter: ^2.3.4
+
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
