--- a/project_x1_news/pubspec.yaml
+++ b/project_x1_news/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   fpdart: ^1.1.0
   supabase_flutter: ^2.3.4
 
+  # State Management
+  flutter_bloc: ^8.1.4
+
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
