--- a/project_x1_news/pubspec.yaml
+++ b/project_x1_news/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Core
   fpdart: ^1.1.0
   supabase_flutter: ^2.3.4
+  get_it: ^7.6.7
 
   # State Management
   flutter_bloc: ^8.1.4
