--- a/project_x1_news/ios/Runner/Info.plist
+++ b/project_x1_news/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Gallery image</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera image</string>
 </dict>
 </plist>
