--- a/project_x1_news/pubspec.yaml
+++ b/project_x1_news/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   go_router: ^13.2.1
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
-
+  image_picker: ^1.0.7
+  
   # Core
   fpdart: ^1.1.0
   supabase_flutter: ^2.3.4
