--- a/project_x1_news/pubspec.yaml
+++ b/project_x1_news/pubspec.yaml
@@ -31,11 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  connectivity_plus: ^5.0.2
   go_router: ^13.2.1
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
   image_picker: ^1.0.7
+  internet_connection_checker_plus: ^2.3.0
+
+  # DB 
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+  path_provider: ^2.1.0
   
   # Core
   fpdart: ^1.1.0
